# harden

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
harden/: __init__.py  __main__.py  cli.py  locker.py  pipeline.py
harden/analyzer/: __init__.py  ai_usage.py  ast_utils.py  dependencies.py  detector.py  external_services.py  llm.py  models.py  report.py  secrets.py
harden/generators/: __init__.py  compose.py  dockerfile.py  egress_proxy.py  sbom.py
tests/: README.md  conftest.py
tests/smoke/: test_smoke.py
tests/smoke/examples/: .gitignore
tests/smoke/examples/Chat-Bot-using-Streamlit-and-OpenAI/: harden-report.json
tests/smoke/examples/ChatBot-OpenAI/: harden-report.json
tests/smoke/examples/deepseek_ocr_app/: README.md  harden-report.json
tests/smoke/examples/deepseek_ocr_app/backend/: Dockerfile  format_converter.py  main.py  pdf_utils.py  requirements.txt
tests/smoke/examples/fastApiProject/: harden-report.json
tests/smoke/examples/pandoky/: .gitignore  README.md  app.py  config.py  harden-report.json  pandoky.wsgi  requirements-prod.txt  requirements.txt
tests/smoke/examples/pandoky/plugins/: _cluster_plugin.py  acl_plugin.py  admin_acl_editor_plugin.py  auth_plugin.py  bib_manager_plugin.py  fulltext_indexer.py  media_manager_plugin.py  search_plugin.py  similar_pages_plugin.py  (+1 more)
tests/smoke/examples/synthetic/: APPS_11_20.md  APPS_SUMMARY.md  ENTERPRISE_THEMES.md  OVERVIEW.md  README.md  SECURITY_ISSUES.md  test_all_apps.sh
tests/unit/: test_oss_checklist.py
tutorial/: README.md
(+254 files in other folders)
